--- a/AroraYahtzee/app/src/main/AndroidManifest.xml
+++ b/AroraYahtzee/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".RollScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
